crates/lang/macro/tests/ui/trait_def/fail/message_unsafe_invalid.stderr
error: unsafe ink! trait methods are not supported
 --> $DIR/message_unsafe_invalid.rs:6:5
  |
6 |     unsafe fn message_ref(&self);
  |     ^^^^^^
